--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.12.0",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.12",
     "tailwindcss": "^3.0.24"
