--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.12.0",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.12",
+    "astro-imagetools": "^0.6.15",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
