refactor: :wrench: ordered tailwind classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,16 @@
   "editor.quickSuggestions": {
     "strings": true
   },
-  "tailwindCSS.includeLanguages": {
-    "javascript": "javascript",
-    "html": "HTML"
-  },
-  "editor.inlineSuggest.enabled": true,
-  "[typescript]": {
-    "editor.formatOnPaste": false,
-    "editor.formatOnSave": false,
-  },
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "javascript.format.enable": true,
+  // "tailwindCSS.includeLanguages": {
+  //   "javascript": "javascript",
+  //   "html": "HTML"
+  // },
+  // "editor.inlineSuggest.enabled": true,
+  // "[typescript]": {
+  //   "editor.formatOnPaste": false,
+  //   "editor.formatOnSave": false,
+  // },
+  // "editor.formatOnPaste": true,
+  // "editor.formatOnSave": true,
+  // "javascript.format.enable": true,
 }
